--- a/ITEM/src/App.css
+++ b/ITEM/src/App.css
@@ -1,11 +1,14 @@
 body{
   background-color:rgb(32, 31, 31);
+  margin: 0;
+  padding: 0;
 }
 .tranfer-list{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 490px;
+   margin: 10px 290px; 
+
 }
 .list-container{
   border: 1px solid white;
